 * improved progress bar responsiveness
 * fixed first movement in GCode: go up to safety height before moving to the side
 * fixed model orientation of STL files created by Art of Illusion
 * fixed performance issue when using a support grid
 * fixed empty toolpath after transforming the model
 * fixed various minor bugs of the toolpath generator

Version 0.2.5 - 2010-06-10
 * added support bridges for holding the object during cutting
 * calculate the estimated machine time for each toolpath
 * changing the unit (mm/inch) now opens a dialog for scaling the model,
   processing dimensions or tool dimensions accordingly
 * remove unnecessary moves to safety height
 * changed name of configuration setting "overlap" to "overlap_percent"
   (you may need to change this name in your custom config files)

Version 0.2.4 - 2010-04-12
 * added a simple simulation mode for visualizing the material penetration of a toolpath
 * join tangential moves (removes the inner points in a colinear set of adjacent path points)
 * fixed careless import of Tkinter
 * added missing INSTALL.TXT to source package
 * fixed typo that breaks PyCAM for Python 2.6

Version 0.2.3 - 2010-04-05
 * GUI change: tool and process settings can be combined into tasks
 * store configured settings to a file in the user's home directory
 * added "material allowance" support for non-ODE calculations
 * added export of EMC2 tool definitions
 * added a warning dialog (GUI) for missing dependencies during startup (especially useful for Windows)
 * improved GUI for model scaling
 * allow to configure if the tool should move inside/along/around the boundary limits
 * fixed "overlap" calculation
 * prevent invalid input values (zero tool radius, ...)
 * fixed a bug that could rarely cause eternal loops of the PushCutter
 * reduced memory consumption of toolpaths for python 2.6 or above
 * disabled ODE as the default computation backend (due to this bug: